fixed issue where header was creating scroll on mobile because of padding

--- a/style.css
+++ b/style.css
@@ -7,10 +7,12 @@ body{
     
 }
 header{
-    display: flex;
-    padding: 12px;
     position: absolute;
     width: 100%;
+}
+header .hContainer{
+    padding: 12px;
+
 }
 header figure{
     width: 15%;
@@ -62,7 +64,7 @@ nav ul li a:hover:after {
 }
 
 
-.intro {
+.hero {
     display: flex;
     font-family: "Lexend", serif;
     font-weight: 700;
@@ -72,10 +74,10 @@ nav ul li a:hover:after {
     justify-content: center;
     gap: 16px;
     padding: 16px;
-    height: 90vh;
+    height: 100vh;
 }
 
-.intro h1{
+.hero h1{
     text-align: center;
     font-size: 30px;
 
